--- a/src/pages/Home/Services/Services/Services.css
+++ b/src/pages/Home/Services/Services/Services.css
@@ -3,3 +3,9 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
 }
+
+@media only screen and (max-width: 576px){
+    .services{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
