--- a/src/pages/Home/Treatment/Treatment.css
+++ b/src/pages/Home/Treatment/Treatment.css
@@ -20,3 +20,9 @@
     margin: 50px 0px;
     font-size: 20px;
 }
+
+@media only screen and (max-width: 576px){
+    .treatment{
+        flex-direction: column;
+    }
+}
